Fixes BH-303 exercise quadrilateral_types

--- a/khan-exercises/exercises/quadrilateral_types.html
+++ b/khan-exercises/exercises/quadrilateral_types.html
@@ -10,7 +10,7 @@
         <div class="problems">
             <div id="trapezoid">
                 <div class="vars">
-                    <var id="TYPE">"Trapezium"</var>
+                    <var id="TYPE">"trapezoid"</var>
                     <var id="ANGLES">randomQuadAngles[ TYPE ]()</var>
                     <var id="ANGLE_LABELS">jQuery.map( ANGLES,function( x ){ return x  + "^{\\circ}"; } )</var>
                 </div>
@@ -30,7 +30,7 @@
                         q.drawLabels();    
                     </div>
                 </div>
-                <div class="solution">Trapeziod</div>
+                <div class="solution">Trapezium</div>
                 <ul class="choices" data-category="true">
                     <li data-tt="list1" >Vlieger</li>
                     <li data-tt="list2" >Trapezium</li>
@@ -49,9 +49,9 @@
             </div>
             <div id="isoscelesTrap" data-type="trapezoid">
                 <div class="vars">
-                    <var id="TYPE">"isoscelestrapezoid"</var>
+                    <var id="TYPE">"isoscelesTrapezoid"</var>
                 </div>
-                <div class="solution">Gelijkbenig Trapezium</div>
+                <div class="solution">Gelijkbenig trapezium</div>
                 <div class="hints">
                     <p data-tt="hint4" >Deze figuur heeft 2 paralelle zijden.</p>
                     <p data-tt="hint5" >IHet heeft ook 2 paar aangrenzende hoeken die elkaars supplement zijn.</p>
@@ -59,7 +59,7 @@
                     <p data-tt="hint7" >Maar de benen zijn gelijk, dus is het een gelijkbenig trapezium.</p>
                 </div>
             </div>    
-            <div id="parallelogram" data-type="trapezium">
+            <div id="parallelogram" data-type="trapezoid">
                 <div class="vars">
                     <var id="TYPE">"parallelogram"</var>
                 </div>
