Clean site html

--- a/khan-exercises/exercises/khan-exercise.html
+++ b/khan-exercises/exercises/khan-exercise.html
@@ -44,6 +44,13 @@
                 </div>
                 <span id="hint-remainder"></span>
             </div>
+            <div class="info-box edit-box">
+                <span class="info-box-header">Edit properties</span>
+                <div id="get-hint-button-container">
+                    <input id="hint" type="button" class="simple-button orange full-width" value="I'd like a hint" name="hint"/>
+                </div>
+                <span id="hint-remainder"></span>
+            </div>
             <div class="info-box related-video-box" style="display:none;">
                 <div id="related-video-content">
                     <span class="info-box-header">Problemen? Bekijk een filmpje.</span>
