--- a/khan-exercises/exercises/khan-site.html
+++ b/khan-exercises/exercises/khan-site.html
@@ -9,66 +9,19 @@
         <div id="page-container-inner">
             <div id="fb-root"></div>
             <header>
-                <div id="top-header">
-                    <div class="top-header-links">
-                                <span class="page_links" id="page_auth">
-                                    <span class="achievement-badge-counts" style="left:-60px;"></span>
-                                    <span><a href="http://khanacademy.org/login">Login</a></span>
-                                    <span class="separator"></span>
-                                    <span><a href="http://khanacademy.org/contribute" id="donate-link">Donate</a></span>
-                                </span>
-
-                        <div class="clear"></div>
-                        <div id="navbar">
-                            <div class="site-wide-navigation">
-                                <nav>
-                                            <span class="links nav-subheader">
-                                                <span class="dropdown topic-browser-dropdown">
-                                                    <a href="http://khanacademy.org/#browse"
-                                                       class="watch-link dropdown-toggle">Bekijk<span
-                                                            class="caret"></span></a>
-                                                <a href="http://khanacademy.org/exercisedashboard"
-                                                   class="selected practice-link">Oefen</a>
-                                                <a href="http://khanacademy.org/class_profile">Coach</a>
-                                                <a href="http://khanacademy.org/contribute">Help mee</a>
-                                                <a href="http://khanacademy.org/about">Over ons</a>
-                                                </span>
-                                            </span>
-                                </nav>
-                            </div>
-                            <div id="search-box">
-                                <form class="page-search" action="/search">
-                                    <input id="search-input" type="text" placeholder="Search for a video or topic"
-                                           name="page_search_query" value=""
-                                           class="ui-corner-all placeholder simple-input search-input blur-on-esc ui-autocomplete-input"
-                                           autocomplete="off" role="textbox" aria-autocomplete="list"
-                                           aria-haspopup="true"><input type="submit" value=" " id="search-submit"
-                                                                       class="search-submit" autocomplete="off"
-                                                                       role="textbox" aria-autocomplete="list"
-                                                                       aria-haspopup="true"/>
-                                </form>
-                            </div>
-                            <div class="clear"></div>
-                        </div>
-                    </div>
-
-                    <div id="logo">
-                        <a id="logo-image" href="http://khanacademy.org/" title="Khan Academy" name="logo-image"></a>
-
-                        <div id="stats"><span id="page_visitors"
-                                              style="display: inline;">Over 9,000 lessons delivered</span></div>
-                    </div>
-                    <div class="clear"></div>
-                </div>
             </header>
             <div id="container" class="single-exercise visited-no-recolor" style="overflow: hidden;">
                 <article class="exercises-content clearfix">
                     <div class="exercises-header">
                         <h2 class="section-headline">
                             <div class="topic-exercise-badge">&nbsp;</div>
-                            <span class="practice-exercise-topic-context">Practicing</span>
                         </h2>
                     </div>
+                        <button class="simple-button blue">Edit</button>
+                        <div>
+                        Mark as tested
+                        <button class="simple-button blue">Tested!</button>Observations:<input type="text" />
+                        </div>
                     <div class="exercises-body">
                         <div class="exercises-stack">&nbsp;</div>
                         <div class="exercises-card current-card">
@@ -96,50 +49,6 @@
         </div>
     </div>
 </div>
-
-<div class="push"></div>
-<footer id="footer" class="short">
-    <div id="leaves">
-        <div class="inner">
-            <div id="copyright" class="tiny">
-                <small>&copy;2012 Khan Academy&#0153;</small>
-                <a rel="license" href="http://creativecommons.org/licenses/by-nc-sa/3.0/us/" id="creative-commons-link"
-                   name="creative-commons-link"></a>
-            </div>
-                    <span class="footer-links">
-                        <a href="http://khanacademy.desk.com/">FAQ</a>
-                        <span class="sep">|</span>
-                        <a href="/reportissue?type=Defect&issue_labels=Component-Code%2CExercise-addition_1%2CProblem-1"
-                           id="report">Meld een probleem</a>
-                        <span class="sep">|</span>
-                        <a href="/about/the-team">Contact</a><a href="/jobs">Jobs</a>
-                        <span class="sep">|</span>
-                        <a href="/about/tos" title="Terms of Service">ToS</a> <a href="/about/privacy-policy"
-                                                                                 title="Privacy Policy">Privacy
-                        beleid</a>
-                        <span class="sep">|</span>
-                        <a href="/downloads">Downloads</a>
-                        <span class="sep">|</span>
-                        <a href="/coaches">Voeg een coach toe</a>
-
-
-                        <span class="sep">|</span>
-                        <span class="small-social-links">
-                            <a class="google-analytics-link-track youtube"
-                               onclick="_gaq.push(['_trackEvent', 'Click', 'Youtube-Subscribe-Header']);"
-                               href="http://www.youtube.com/PerceptumNL" title="Youtube"></a>
-                            <a class="google-analytics-link-track twitter"
-                               onclick="_gaq.push(['_trackEvent', 'Click', 'Twitter-Follow-Header']);"
-                               href="http://twitter.com/KhanAcademie" title="Twitter"></a>
-                            <a class="google-analytics-link-track facebook"
-                               onclick="_gaq.push(['_trackEvent', 'Click', 'Facebook-Join-Header']);"
-                               href="http://www.facebook.com/pages/Khanacademie-NL/123650984422563"
-                               title="Facebook"></a>
-                        </span>
-                    </span>
-        </div>
-    </div>
-</footer>
 </body>
 </html>
 
