--- a/khan-exercises/exercises/solving_similar_triangles_1.html
+++ b/khan-exercises/exercises/solving_similar_triangles_1.html
@@ -159,7 +159,7 @@
                 <p>Daarom kunnen wij gelijke delen en oplossen voor<code><var>X</var></code>.</p>
                 <div>
                     <p><code>\dfrac{\color{red}{<var>B_LABELS[SOLUTION_INDEX]</var>}}{\color{blue}{<var>A_SIDES[SOLUTION_INDEX]</var>}} = \dfrac{\color{red}{<var>B_LABELS[PROP_INDEX]</var>}}{\color{blue}{<var>A_SIDES[PROP_INDEX]</var>}}</code></p>
-                    <p data-if="A_SIDES[PROP_INDEX] !== A_SIDES[ALTERNATE_INDEX]">Opmerking: Als elk corresponderende aandeel gelijk is <code>\dfrac{\color{red}{side}}{\color{blue}{side}}</code> kan je de andere zijde gebruiken (i.e.,  <code>\dfrac{\color{red}{<var>B_LABELS[SOLUTION_INDEX]</var>}}{\color{blue}{<var>A_SIDES[SOLUTION_INDEX]</var>}} = \dfrac{\color{red}{<var>B_LABELS[ALTERNATE_INDEX]</var>}}{\color{blue}{<var>A_SIDES[ALTERNATE_INDEX]</var>}}</code>)</p>
+                    <p data-if="A_SIDES[PROP_INDEX] !== A_SIDES[ALTERNATE_INDEX]">Opmerking: Als elk corresponderende aandeel gelijk is <code>\dfrac{\color{red}{side}}{\color{blue}{side}}</code> kan je de andere zijde gebruiken (bijvoorbeeld: <code>\dfrac{\color{red}{<var>B_LABELS[SOLUTION_INDEX]</var>}}{\color{blue}{<var>A_SIDES[SOLUTION_INDEX]</var>}} = \dfrac{\color{red}{<var>B_LABELS[ALTERNATE_INDEX]</var>}}{\color{blue}{<var>A_SIDES[ALTERNATE_INDEX]</var>}}</code>)</p>
                 </div>
 
                 <div>
