--- a/khan-exercises/exercises/area_of_parallelograms.html
+++ b/khan-exercises/exercises/area_of_parallelograms.html
@@ -94,7 +94,7 @@
 
                 <div class="solution" data-type="multiple">
                     <span class="sol"><var>K</var></span>
-                    vierkante <var>plural(UNIT_TEXT)</var>
+                    vierkante <var>(UNIT_TEXT)</var>
                 </div>
 
                 <div class="hints">
