--- a/khan-exercises/exercises/squares_and_rectangles.html
+++ b/khan-exercises/exercises/squares_and_rectangles.html
@@ -2,7 +2,7 @@
 <html data-translatable data-require="math graphie">
 <head>
     <meta charset="UTF-8" />
-    <title>Squares and rectangles</title>
+    <title>Vierkanten en rechthoeken</title>
     <script src="../khan-exercise.js"></script>
 
     <script type="text/javascript">
@@ -87,7 +87,7 @@
             </div>
 
             <div class="question">
-                <p data-tt="question1">Suppose the side length of a square is <code>\color{<var>S_COLOR</var>}{<var>S</var>}</code>. What is its area?</p>
+                <p data-tt="question1">Stel dat de zijde van een vierkant <code>\color{<var>S_COLOR</var>}{<var>S</var>}</code> is. Wat is de oppervlakte?</p>
             </div>
 
             <div class="solution"><var>S * S</var></div>
@@ -98,9 +98,9 @@
 
                     drawSqSide( S );
                 </div>
-                <p data-tt="hint1">The area of a square is <code>K = s \cdot s = s^2</code>.</p>
+                <p data-tt="hint1">De oppervlakte van een vierkant is <code>K = s \cdot s = s^2</code>.</p>
                 <div>
-                    <p data-tt="hint2">Substituting in <code>s = \color{<var>S_COLOR</var>}{<var>S</var>}</code> gives <code>K = \color{<var>S_COLOR</var>}{<var>S</var>}^2 = \color{<var>K_COLOR</var>}{<var>S * S</var>}</code>.</p>
+                    <p data-tt="hint2">Vervangen in <code>s = \color{<var>S_COLOR</var>}{<var>S</var>}</code> geeft <code>K = \color{<var>S_COLOR</var>}{<var>S</var>}^2 = \color{<var>K_COLOR</var>}{<var>S * S</var>}</code>.</p>
 
                     <div class="graphie" data-update="square">
                         drawSqArea( S );
@@ -115,7 +115,7 @@
             </div>
 
             <div class="question">
-                <p data-tt="question2">Suppose the side length of a square is <code>\color{<var>S_COLOR</var>}{<var>S</var>}</code>. What is its perimeter?</p>
+                <p data-tt="question2">Stel dat de zijde van een vierkant <code>\color{<var>S_COLOR</var>}{<var>S</var>}</code> is. Wat is de omtrek?</p>
             </div>
 
             <div class="solution"><var>4 * S</var></div>
@@ -126,9 +126,9 @@
 
                     drawSqSide( S );
                 </div>
-                <p data-tt="hint3">The perimeter of a square is <code>P = s + s + s + s = 4s</code>.</p>
+                <p data-tt="hint3">De omtrek van een vierkant is <code>P = s + s + s + s = 4s</code>.</p>
                 <div>
-                    <p data-tt="hint4">Substituting in <code>s = \color{<var>S_COLOR</var>}{<var>S</var>}</code> gives <code>P = 4\cdot\color{<var>S_COLOR</var>}{<var>S</var>} = \color{<var>P_COLOR</var>}{<var>4 * S</var>}</code>.</p>
+                    <p data-tt="hint4">Vervangen in <code>s = \color{<var>S_COLOR</var>}{<var>S</var>}</code> geeft <code>P = 4\cdot\color{<var>S_COLOR</var>}{<var>S</var>} = \color{<var>P_COLOR</var>}{<var>4 * S</var>}</code>.</p>
 
                     <div class="graphie" data-update="square">
                         drawSqPerimeter( S );
@@ -143,7 +143,7 @@
             </div>
 
             <div class="question">
-                <p data-tt="question3">Suppose the area of a square is <code>\color{<var>K_COLOR</var>}{<var>S * S</var>}</code>. What is its side length?</p>
+                <p data-tt="question3">Stel dat de oppervlakte van een vierkant <code>\color{<var>K_COLOR</var>}{<var>S * S</var>}</code> is. Wat is de lente van de zijden?</p>
             </div>
 
             <div class="solution"><var>S</var></div>
@@ -154,9 +154,9 @@
 
                     drawSqArea( S );
                 </div>
-                <p data-tt="hint5">The area of a square is <code>K = s \cdot s = s^2</code>, so <code>s = \sqrt{K}</code>.</p>
+                <p data-tt="hint5">De oppervlakte van een vierkant is <code>K = s \cdot s = s^2</code>, dus <code>s = \sqrt{K}</code>.</p>
                 <div>
-                    <p data-tt="hint6">Substituting in <code>K = \color{<var>K_COLOR</var>}{<var>S * S</var>}</code> gives <code>s = \sqrt{\color{<var>K_COLOR</var>}{<var>S * S</var>}} = \color{<var>S_COLOR</var>}{<var>S</var>}</code>.</p>
+                    <p data-tt="hint6">Vervangen in <code>K = \color{<var>K_COLOR</var>}{<var>S * S</var>}</code> geeft <code>s = \sqrt{\color{<var>K_COLOR</var>}{<var>S * S</var>}} = \color{<var>S_COLOR</var>}{<var>S</var>}</code>.</p>
 
                     <div class="graphie" data-update="square">
                         drawSqSide( S );
@@ -171,7 +171,7 @@
             </div>
 
             <div class="question">
-                <p data-tt="question4">Suppose the area of a square is <code>\color{<var>K_COLOR</var>}{<var>S * S</var>}</code>. What is its perimeter?</p>
+                <p data-tt="question4">Stel dat de oppervlakte van een vierkant <code>\color{<var>K_COLOR</var>}{<var>S * S</var>}</code> is. Wat is de omtrek?</p>
             </div>
 
             <div class="solution"><var>4 * S</var></div>
@@ -182,11 +182,11 @@
 
                     drawSqArea( S );
                 </div>
-                <p data-tt="hint7">The area of a square is <code>K = s \cdot s = s^2</code>, so <code>s = \sqrt{K}</code>.</p>
-                <p data-tt="hint8">Substituting in <code>K = \color{<var>K_COLOR</var>}{<var>S * S</var>}</code> gives <code>s = \sqrt{\color{<var>K_COLOR</var>}{<var>S * S</var>}} = \color{<var>S_COLOR</var>}{<var>S</var>}</code>.</p>
-                <p data-tt="hint9">Now find the perimeter using <code>P = s + s + s + s = 4s</code>.</p>
+                <p data-tt="hint7">De oppervlakte van een vierkant is <code>K = s \cdot s = s^2</code>, dus <code>s = \sqrt{K}</code>.</p>
+                <p data-tt="hint8">Vervangen in <code>K = \color{<var>K_COLOR</var>}{<var>S * S</var>}</code> geeft <code>s = \sqrt{\color{<var>K_COLOR</var>}{<var>S * S</var>}} = \color{<var>S_COLOR</var>}{<var>S</var>}</code>.</p>
+                <p data-tt="hint9">Bereken de omtrek met <code>P = s + s + s + s = 4s</code>.</p>
                 <div>
-                    <p data-tt="hint10">Substituting in <code>s = \color{<var>S_COLOR</var>}{<var>S</var>}</code> gives <code>P = 4\cdot\color{<var>S_COLOR</var>}{<var>S</var>} = \color{<var>P_COLOR</var>}{<var>4 * S</var>}</code>.</p>
+                    <p data-tt="hint10">Vervangen in <code>s = \color{<var>S_COLOR</var>}{<var>S</var>}</code> geeft <code>P = 4\cdot\color{<var>S_COLOR</var>}{<var>S</var>} = \color{<var>P_COLOR</var>}{<var>4 * S</var>}</code>.</p>
 
                     <div class="graphie" data-update="square">
                         drawSqPerimeter( S );
@@ -201,7 +201,7 @@
             </div>
 
             <div class="question">
-                <p data-tt="question5">Suppose the perimeter of a square is <code>\color{<var>P_COLOR</var>}{<var>4 * S</var>}</code>. What is its side length?</p>
+                <p data-tt="question5">Stel dat de omtrek van een vierkant <code>\color{<var>P_COLOR</var>}{<var>4 * S</var>}</code> is. Wat is de lengte van de zijden?</p>
             </div>
 
             <div class="solution"><var>S</var></div>
@@ -212,9 +212,9 @@
 
                     drawSqPerimeter( S );
                 </div>
-                <p data-tt="hint11">The perimeter of a square is <code>P = s + s + s + s = 4s</code>, so <code>s = P/4</code>.</p>
+                <p data-tt="hint11">De omtrek van een vierkant is <code>P = s + s + s + s = 4s</code>, dus <code>s = P/4</code>.</p>
                 <div>
-                    <p data-tt="hint12">Substituting in <code>P = \color{<var>P_COLOR</var>}{<var>4 * S</var>}</code> gives <code>s = \color{<var>P_COLOR</var>}{<var>4 * S</var>}/4 = \color{<var>S_COLOR</var>}{<var>S</var>}</code>.</p>
+                    <p data-tt="hint12">Vervangen in <code>P = \color{<var>P_COLOR</var>}{<var>4 * S</var>}</code> geeft <code>s = \color{<var>P_COLOR</var>}{<var>4 * S</var>}/4 = \color{<var>S_COLOR</var>}{<var>S</var>}</code>.</p>
 
                     <div class="graphie" data-update="square">
                         drawSqSide( S );
@@ -229,7 +229,7 @@
             </div>
 
             <div class="question">
-                        <p data-tt="question6">Suppose the perimeter of a square is <code>\color{<var>P_COLOR</var>}{<var>4 * S</var>}</code>. What is its side length?</p>
+                        <p data-tt="question6">Stel dat de omtrek van een vierkant <code>\color{<var>P_COLOR</var>}{<var>4 * S</var>}</code> is. Wat is de lengte van de zijden?</p>
             </div>
 
             <div class="solution"><var>S * S</var></div>
@@ -240,11 +240,11 @@
 
                     drawSqPerimeter( S );
                 </div>
-                <p data-tt="hint13">The perimeter of a square is <code>P = s + s + s + s = 4s</code>, so <code>s = P/4</code>.</p>
-                <p data-tt="hint14">Substituting in <code>P = \color{<var>P_COLOR</var>}{<var>4 * S</var>}</code> gives <code>s = \color{<var>P_COLOR</var>}{<var>4 * S</var>}/4 = \color{<var>S_COLOR</var>}{<var>S</var>}</code>.</p>
-                <p data-tt="hint15">Now find the area using <code>K = s \cdot s = s^2</code>.</p>
+                <p data-tt="hint13">De omtrek van een vierkant is <code>P = s + s + s + s = 4s</code>, dus <code>s = P/4</code>.</p>
+                <p data-tt="hint14">Vervangen in <code>P = \color{<var>P_COLOR</var>}{<var>4 * S</var>}</code> geeft <code>s = \color{<var>P_COLOR</var>}{<var>4 * S</var>}/4 = \color{<var>S_COLOR</var>}{<var>S</var>}</code>.</p>
+                <p data-tt="hint15">Bereken nu de oppervlakte met <code>K = s \cdot s = s^2</code>.</p>
                 <div>
-                    <p data-tt="hint16">Substituting in <code>s = \color{<var>S_COLOR</var>}{<var>S</var>}</code> gives <code>K = \color{<var>S_COLOR</var>}{<var>S</var>}^2 = \color{<var>K_COLOR</var>}{<var>S * S</var>}</code>.</p>
+                    <p data-tt="hint16">Vervangen in <code>s = \color{<var>S_COLOR</var>}{<var>S</var>}</code> geeft <code>K = \color{<var>S_COLOR</var>}{<var>S</var>}^2 = \color{<var>K_COLOR</var>}{<var>S * S</var>}</code>.</p>
 
                     <div class="graphie" data-update="square">
                         drawSqArea( S );
@@ -260,7 +260,7 @@
             </div>
 
             <div class="question">
-                <p data-tt="question7">Suppose a rectangle has length <code>\color{<var>L_COLOR</var>}{<var>L</var>}</code> and width <code>\color{<var>W_COLOR</var>}{<var>W</var>}</code>. What is its area?</p>
+                <p data-tt="question7">Stel dat een rechthoek een lengte van <code>\color{<var>L_COLOR</var>}{<var>L</var>}</code> en breedte <code>\color{<var>W_COLOR</var>}{<var>W</var>}</code> heeft. Wat is de oppervlakte?</p>
             </div>
 
             <div class="solution"><var>L * W</var></div>
@@ -269,9 +269,9 @@
                 <div class="graphie" id="rectangle">
                     initRect( L, W );
                 </div>
-                <p data-tt="hint17">The area of a rectangle is <code>K = lw</code>.</p>
+                <p data-tt="hint17">De oppervlakte van een vierkant is <code>K = lw</code>.</p>
                 <div>
-                    <p data-tt="hint18">Substituting in <code>l = \color{<var>L_COLOR</var>}{<var>L</var>}</code> and <code>w = \color{<var>W_COLOR</var>}{<var>W</var>}</code> gives <code>K = \color{<var>L_COLOR</var>}{<var>L</var>} \cdot \color{<var>W_COLOR</var>}{<var>W</var>} = \color{<var>K_COLOR</var>}{<var>L * W</var>}</code>.</p>
+                    <p data-tt="hint18">Vervangen in <code>l = \color{<var>L_COLOR</var>}{<var>L</var>}</code> en <code>w = \color{<var>W_COLOR</var>}{<var>W</var>}</code> geeft <code>K = \color{<var>L_COLOR</var>}{<var>L</var>} \cdot \color{<var>W_COLOR</var>}{<var>W</var>} = \color{<var>K_COLOR</var>}{<var>L * W</var>}</code>.</p>
                     
                     <div class="graphie" data-update="rectangle">
                         drawRectArea( L, W );
@@ -287,7 +287,7 @@
             </div>
 
             <div class="question">
-                <p data-tt="question8">Suppose a rectangle has length <code>\color{<var>L_COLOR</var>}{<var>L</var>}</code> and width <code>\color{<var>W_COLOR</var>}{<var>W</var>}</code>. What is its perimeter?</p>
+                <p data-tt="question8">Stel dat een rechthoek een lengte van <code>\color{<var>L_COLOR</var>}{<var>L</var>}</code> en breedte <code>\color{<var>W_COLOR</var>}{<var>W</var>}</code> heeft. Wat is de omtrek?</p>
             
             </div>
 
@@ -297,9 +297,9 @@
                 <div class="graphie" id="rectangle">
                     initRect( L, W );
                 </div>
-                <p data-tt="hint19">The area of a rectangle is <code>P = l + w + l + w = 2(l + w)</code>.</p>
+                <p data-tt="hint19">Stel dat de oppervlakte van een rechthoek <code>P = l + w + l + w = 2(l + w)</code> is.</p>
                 <div>
-                    <p data-tt="hint20">Substituting in <code>l = \color{<var>L_COLOR</var>}{<var>L</var>}</code> and <code>w = \color{<var>W_COLOR</var>}{<var>W</var>}</code> gives <code>P = 2 (\color{<var>L_COLOR</var>}{<var>L</var>} + \color{<var>W_COLOR</var>}{<var>W</var>}) = \color{<var>P_COLOR</var>}{<var>2 * L + 2 * W</var>}</code>.</p>
+                    <p data-tt="hint20">Vervangen in <code>l = \color{<var>L_COLOR</var>}{<var>L</var>}</code> en <code>w = \color{<var>W_COLOR</var>}{<var>W</var>}</code> geeft <code>P = 2 (\color{<var>L_COLOR</var>}{<var>L</var>} + \color{<var>W_COLOR</var>}{<var>W</var>}) = \color{<var>P_COLOR</var>}{<var>2 * L + 2 * W</var>}</code>.</p>
 
                     <div class="graphie" data-update="rectangle">
                         drawRectPerimeter( L, W );
