--- a/khan-exercises/exercises/congruency_postulates.html
+++ b/khan-exercises/exercises/congruency_postulates.html
@@ -40,7 +40,7 @@
                     <strong>Is <em><var>NAME</var></em> een congruentie voorwaarde?</strong><br />
                     Beantwoord de vraag door de punten hieronder te slepen om te zien hoeveel verschillende driehoeken je kunt maken.<br />
                     Als je denkt dat <var>NAME</var> niet een congruentie voorwaarde is, bewijs dit door het maken van niet congruente driehoeken.
-                    Maak anders congruente driehoeken
+                    Maak anders congruente driehoeken.
                 </p>
                 <div  class="question">
                     <em data-tt="question1"> Je driehoek kan overal staan. Het is niet nodig de 2 driehoeken over elkaar te leggen.</em>
