Use all other fixes in https://github.com/Khan/khan-exercises/commit/83ab06dc30c3c2c21a36cf6b25d175f2ee89a3be

--- a/khan-exercises/exercises/empirical_rule.html
+++ b/khan-exercises/exercises/empirical_rule.html
@@ -50,7 +50,7 @@
                     <code><var>roundTo( 1, MEAN + STDDEV * Z )</var></code> jaar.
                 </p>
 
-                <div class="solution" data-forms="percent"><var>ANSWER</var></div>
+                <div class="solution" data-forms="percent"><var>ANSWER / 100</var></div>
 
                 <div class="hints">
                     <p>We kunnen dit schatten met de vuistregel voor normale verdelingen, ook wel de 68-95-99,7 procent regel genoemd.</p>
@@ -393,7 +393,7 @@
                     <code><var>roundTo( 1, MEAN + STDDEV * Z1 )</var></code> en <code><var>roundTo( 1, MEAN + STDDEV * Z2 )</var></code> jaar oud wordt.
                 </p>
 
-                <div class="solution" data-forms="percent"><var>AREA</var></div>
+                <div class="solution" data-forms="percent"><var>AREA / 100</var></div>
 
                 <div class="hints" data-apply="appendContents">
                     <div id="hintGoal">
