--- a/khan-exercises/exercises/z_scores_2.html
+++ b/khan-exercises/exercises/z_scores_2.html
@@ -70,7 +70,7 @@
                 <span><var>row</var></span><span data-each="ZGRID[i] as j, zgrid"><var>zgrid</var></span>
             </div>
             <div class="solution" data-forms="percent">
-                <span><var>roundTo(2, ANSWER * 100)</var></span>
+                <span><var>roundTo(4, ANSWER)</var></span>
             </div>
 
             <div class="hints">
