--- a/khan-exercises/exercises/breuken_teller_1_ongelijke_noemer_optellen.html
+++ b/khan-exercises/exercises/breuken_teller_1_ongelijke_noemer_optellen.html
@@ -2,7 +2,7 @@
 <html data-translatable data-require="math math-format">
 <head>
     <meta charset="UTF-8" />
-    <title>Twee breuken dezelfde noemer geven</title>
+    <title>Breuken met teller 1 en ongelijke noemer optellen</title>
     <script src="../khan-exercise.js"></script>
 </head>
 <body>
