data-simplify="optional"  verwijderd

--- a/khan-exercises/exercises/breuken_teller_1_ongelijke_noemer_optellen.html
+++ b/khan-exercises/exercises/breuken_teller_1_ongelijke_noemer_optellen.html
@@ -29,7 +29,7 @@
             <div class="question">
                <p>Tel <code><var>fraction(NUM,DEN1)</var></code> en <code><var>fraction(NUM,DEN2)</var></code> bij elkaar op.</p>
             </div>
-  <p class="solution" data-type="rational" data-simplify="optional"><var>(DEN1+DEN2)/(DEN1*DEN2)</var></p>
+  <p class="solution" data-type="rational"><var>(DEN1+DEN2)/(DEN1*DEN2)</var></p>
         </div>
     </div>
 
