Fixes BH-343 and 351, geometry_proofs_1 translated

--- a/khan-exercises/exercises/arithmetic_word_problems_1.html
+++ b/khan-exercises/exercises/arithmetic_word_problems_1.html
@@ -17,7 +17,7 @@
 
             <div id="take-away-result">
                 <p class="problem" data-tt="hint1">
-                    Er zitten <var>plural('zit', TOTAL)</var> <var>plural(TOTAL, 'persoon')</var> in de tram.
+                    Er zitten <var>plural(TOTAL, 'persoon')</var> in de tram.
                     Er stappen <var>plural(NUM2, 'persoon')</var> uit bij de halte.
                 </p>
                 <p class="question" data-tt="hint2">
