--- a/khan-exercises/exercises/vermenigvuldigen_breuken_meerdere_keren_wegstrepen.html
+++ b/khan-exercises/exercises/vermenigvuldigen_breuken_meerdere_keren_wegstrepen.html
@@ -27,7 +27,7 @@
     <div class="problems">
         <div>
             <div class="question">
-                <p>Los op: <code><var>fraction(NUM,DEN)</var> * <var>fraction(NUM2,DEN2)</var></code>.</p>
+                <p>Bereken: &nbsp; &nbsp;<code><var>fraction(NUM,DEN)</var> \times <var>fraction(NUM2,DEN2)</var></code>.</p>
             </div>
             <div class="solution" data-type="rational"><var>REDUCE[0]/REDUCE[1]</var></div>
         </div>
@@ -42,13 +42,13 @@
 	
 	<p data-tt="hint1c">Dan krijgen we dus <code>\displaystyle {} 
 	   \frac{\cancel{\color{#7EC922}{<var>NUM</var>}} \color{#6495ED}{<var>NUM/NUM</var>}}{\cancel{\color{#f00}{<var>DEN</var>}} \color{#6495ED}{<var>DEN/NUM2</var>}} 
-	   * \frac{\cancel{\color{#f00}{<var>NUM2</var>}}  \color{#6495ED}{<var>NUM2/NUM2</var>}}{\cancel{\color{#7EC922}{<var>DEN2</var>}} \color{#6495ED}{<var>DEN2/NUM</var>}} 
+	   \times \frac{\cancel{\color{#f00}{<var>NUM2</var>}}  \color{#6495ED}{<var>NUM2/NUM2</var>}}{\cancel{\color{#7EC922}{<var>DEN2</var>}} \color{#6495ED}{<var>DEN2/NUM</var>}} 
 	   = \color{#6495ED}{<var>fraction(NUM/NUM,DEN/NUM2)</var>} 
-	   * \color{#6495ED}{<var>fraction(NUM2/NUM2,DEN2/NUM)</var>}</code></p>
+	   \times \color{#6495ED}{<var>fraction(NUM2/NUM2,DEN2/NUM)</var>}</code></p>
 	
 	
 	
-	<p data-tt="hint1d">Nu hoeven we alleen <code> \displaystyle {} \frac{teller * teller}{noemer * noemer} </code> te doen.</p>
+	<p data-tt="hint1d">Nu hoeven we alleen <code> \displaystyle {} \frac{teller \times teller}{noemer  \times noemer} </code> te doen.</p>
 
 	<p data-tt="hint1e">Dat wordt dus <code> \displaystyle {} \frac{\color{#6495ED}{<var>NUM/NUM</var>} \times \color{#6495ED}{<var>NUM2/NUM2</var>}}{\color{#6495ED}{<var>DEN/NUM2</var>} \times \color{#6495ED}{<var>DEN2/NUM</var>}} = \color{#6495ED}{<var>fraction((NUM/NUM)*(NUM2/NUM2),(DEN/NUM2)*(DEN2/NUM))</var>}</code></p>
 	<p data-tt="hint2" data-if="reduces((NUM/NUM)*(NUM2/NUM2),(DEN/NUM2)*(DEN2/NUM))">Nu nog vereenvoudigen:<code> \color{#6495ED}{<var>fraction(NUM,(DEN/NUM2)*DEN2)</var>} = <var>fraction(REDUCE[0], REDUCE[1])</var></code> </p>
