--- a/khan-exercises/exercises/delen_gemengde_breuken.html
+++ b/khan-exercises/exercises/delen_gemengde_breuken.html
@@ -2,7 +2,190 @@
 <html data-require="math math-format">
 <head>
     <meta charset="UTF-8" />
-    <title>Gemengde breuken door elkaar delen</title>
+    <title>Delen met gemengde breuken</title>
+    <script src="../khan-exercise.js"></script>
+</head>
+<body>
+    <div class="exercise">
+    <div class="vars" data-require="DEN2 &gt; NUM && DEN &gt; NUM2">
+	<var id="NUM">randRange(2,3)</var>
+	<var id="NUM2">randRange(2,3)</var>
+	<var id="WHOLE">randRange(1,3)</var>
+	<var id="WHOLE2">randRange(1,3)</var>
+	<var  id="DEN">randRange(2,5)</var>
+	<var  id="DEN2">randRange(2,5)</var>
+	
+	
+	<!-- testen
+	
+	<var id="NUM">3</var>
+	<var id="NUM2">2</var>
+	<var id="WHOLE">1</var>
+	<var id="WHOLE2">1</var>
+	<var  id="DEN">5</var>
+	<var  id="DEN2">6</var> 
+	
+	<var id="NUM">1</var>
+	<var id="NUM2">2</var>
+	<var id="WHOLE">1</var>
+	<var id="WHOLE2">1</var>
+	<var  id="DEN">4</var>
+	<var  id="DEN2">3</var> 
+	
+	<var id="NUM">2</var>
+	<var id="NUM2">4</var>
+	<var id="WHOLE">3</var>
+	<var id="WHOLE2">1</var>
+	<var  id="DEN">12</var>
+	<var  id="DEN2">6</var> 
+	
+	<var id="NUM">2</var>
+	<var id="NUM2">4</var>
+	<var id="WHOLE">7</var>
+	<var id="WHOLE2">1</var>
+	<var  id="DEN">24</var>
+	<var  id="DEN2">6</var> 
+	
+	<var id="NUM">22</var>
+	<var id="NUM2">44</var>
+	<var id="WHOLE">1</var>
+	<var id="WHOLE2">1</var>
+	<var  id="DEN">2</var>
+	<var  id="DEN2">2</var> 
+	-->
+	
+	<var id="ONECHT">DEN*WHOLE+NUM</var>
+	<var id="ONECHT2">DEN2*WHOLE2+NUM2</var>
+	<!-- niet nodig
+	<var id="LCM">getGCD(ONECHT,DEN2)</var>
+	<var id="LCM2">getGCD(ONECHT2,DEN)</var>
+	<var id="TELLER">(ONECHT/LCM)*(DEN2/LCM2)</var>
+	<var id="NOEMER">(DEN/LCM2)*(ONECHT2/LCM)</var>
+	-->	
+    <var id="PRESIMPLIFYNUM">ONECHT*DEN2</var>           
+ 	<var id="PRESIMPLIFYDEN">DEN*ONECHT2</var>	
+	
+	<var id="REDUCE">reduce(PRESIMPLIFYNUM,PRESIMPLIFYDEN)</var>
+	<var id="ANSWERWHOLE">floorTo(0,PRESIMPLIFYNUM/PRESIMPLIFYDEN)</var>
+	<var id="PREANSWERNUM">PRESIMPLIFYNUM - ANSWERWHOLE*PRESIMPLIFYDEN</var>
+	<var id="PREANSWERDEN">PRESIMPLIFYDEN</var>
+	
+    </div>
+
+    <div class="problems">
+        <div>
+            <div class="question">
+                <p>&nbsp;&nbsp;&nbsp;&nbsp;<code>\color{#f00}{<var>WHOLE</var><var>fraction(NUM,DEN)</var>} \div \color{#00f}{<var>WHOLE2</var><var>fraction(NUM2,DEN2)</var>} = </code>.</p>
+            </div>
+            <div class="solution" data-type="rational"><var>PRESIMPLIFYNUM/PRESIMPLIFYDEN</var></div>
+        </div>
+    </div>
+
+    <div class="hints">
+	<p data-tt="hint0">Eerst schrijven we de gemengde breuken als onechte breuken.</p>
+	
+	<p data-tt="hint1">
+	  &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
+	  <code>
+	     \color{#f00}{<var>WHOLE</var><var>fraction(NUM,DEN)</var>
+		  \  =  \  \displaystyle {} \frac{<var>WHOLE</var> \times <var>DEN</var> \ \ + \ \  <var>NUM</var>}{<var>DEN</var>}}
+		 \color{#f00}{ = <var>fraction(DEN*WHOLE+NUM, DEN)</var>}
+		 </code><br /><br />
+		 &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
+		 <code>		  
+		 \color{#00f}{<var>WHOLE2</var><var>fraction(NUM2,DEN2)</var>
+		   \  =  \  \displaystyle {} \frac{<var>WHOLE2</var> \times <var>DEN2</var> \ \ + \ \   <var>NUM2</var>}{<var>DEN2</var>}}
+		 \color{#00f}{ = <var>fraction(DEN2*WHOLE2+NUM2, DEN2)</var>}
+	  </code>
+	</p>
+	
+	<p data-tt="hint2">
+	  We krijgen dan voor de deling: <br /><br />
+	  <code>
+	     \color{#f00}{<var>fraction(ONECHT, DEN)</var>}
+	     \div
+	     \color{#00f}{<var>fraction(ONECHT2, DEN2)</var>}	  
+	  </code>
+	</p>
+	
+	<p data-tt="hint2">Delen is vermenigvuldigen met het omgekeerde.<br />
+	   We krijgen dan voor de vermenigvuldiging: <br /><br />
+	   <code>
+	     \color{#000}{<var>fraction(ONECHT, DEN)</var>}	
+	     \times
+	    \color{#00f}{<var>fraction(DEN2,ONECHT2)</var>}  
+	  </code>
+	</p>
+		
+	<p data-tt="hint1d">Nu hoeven we alleen <code> \displaystyle {} \frac{teller \times teller}{noemer  \times noemer} </code> te doen.</br>
+	<br />Kijk zelf of je liever eerst iets wilt wegstrepen.</p>
+
+	<p data-tt="hint1e">
+	<code> 
+	\displaystyle {} 
+	\frac{<var>ONECHT</var> \times <var>DEN2</var>}{<var>DEN</var> \times <var>ONECHT2</var>} 
+	  = <var>fraction(PRESIMPLIFYNUM,PRESIMPLIFYDEN)</var></code></p>
+	
+	<!-- simplify the answer -->
+    <!--  testen:
+	<p>REDUCE[0] = <code><var>REDUCE[0]</var></code> <br />
+	REDUCE[1] = <code><var>REDUCE[1]</var></code> <br />
+	ANSWERWHOLE = <code><var>ANSWERWHOLE</var></code> <br />
+	PREANSWERNUM = <code><var>PREANSWERNUM</var></code> <br />
+	PREANSWERDEN = <code><var>PREANSWERDEN</var></code> <br />
+	</p>
+	-->
+	<!--------------------------------------------------------------- -->
+	<!-- =================================== vereenvoudigen =======================  			
+	<!-- =================================== deelsom zonder rest =======================  hint 6 -->
+	<p data-tt="hint5" data-if="ANSWERWHOLE &gt; 0 && PREANSWERNUM &lt; 1">
+	Het antwoord kan worden vereenvoudigd (bekijk de breuk als een deelsom). <br /><br />
+	<code> = 
+	 \color{#00e}{<var>ANSWERWHOLE</var>}
+	</code> 			
+	<!-- =================================== deelsom met rest =======================  hint 6 -->
+	<p data-tt="hint6" data-if="ANSWERWHOLE &gt; 0 && PREANSWERNUM &gt; 0">
+	De teller is groter dan de noemer.<br />
+	Het antwoord kan dus als een gemengde breuk worden geschreven.
+	Bekijk de breuk als een deelsom met rest.<br /> &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
+	<code>\color{#00e}{<var>PRESIMPLIFYNUM</var> : <var>PREANSWERDEN</var> = <var>ANSWERWHOLE</var>}</code> &nbsp;&nbsp; rest &nbsp;&nbsp; <code>\color{#00e}{<var>PREANSWERNUM</var>}</code>
+	<br /><br />
+	
+	<code> 
+	\color{#00e}{<var>fraction(PRESIMPLIFYNUM,PRESIMPLIFYDEN,false,false)</var> = 
+	<var>ANSWERWHOLE</var>
+	
+		<var>fraction(PREANSWERNUM,PREANSWERDEN,false,false)</var>}
+		
+		<span data-if="reduces(PREANSWERNUM,PREANSWERDEN)">
+			= <var>ANSWERWHOLE</var><var>fraction(reduce(PREANSWERNUM,PREANSWERDEN)[0],reduce(PREANSWERNUM,PREANSWERDEN)[1])</var>
+		</span>
+	</code>
+	<!-- =================================== delen door factor ===================   hint 7 -->
+	<p data-tt="hint7" data-if="ANSWERWHOLE &lt; 1">
+		
+	   <span data-if="reduces(PREANSWERNUM,PREANSWERDEN)">
+		 Het antwoord kan worden vereenvoudigd.<br /><br /> 
+		 <code>
+			= \color{#00e}{<var>fraction(reduce(PREANSWERNUM,PREANSWERDEN)[0],reduce(PREANSWERNUM,PREANSWERDEN)[1])</var>}
+		 </code>
+		</span>
+	</p>
+	
+    </div>
+    </div>
+</body>
+</html>
+
+
+
+<!--
+
+<!DOCTYPE html>
+<html data-require="math math-format">
+<head>
+    <meta charset="UTF-8" />
+    <title>Delen met gemengde breuken</title>
     <script src="../khan-exercise.js"></script>
 </head>
 <body>
@@ -29,7 +212,7 @@
     <div class="problems">
         <div>
             <div class="question">
-                <p>Los op: <code>\displaystyle {} <var>WHOLE</var> <var>fraction(REDUCE[0],REDUCE[1])</var> \div <var>WHOLE2</var><var>fraction(REDUCED[0],REDUCED[1])</var></code>.</p>
+                <p><code>\displaystyle {} <var>WHOLE</var> <var>fraction(REDUCE[0],REDUCE[1])</var> \div <var>WHOLE2</var><var>fraction(REDUCED[0],REDUCED[1])</var></code>.</p>
             </div>
             <div class="solution" data-type="rational"><var>(WHOLE+REDUCE[0]/REDUCE[1])/(WHOLE2+REDUCED[0]/REDUCED[1])</var></div>
         </div>
@@ -62,3 +245,4 @@
     </div>
 </body>
 </html>
+-->
