--- a/khan-exercises/exercises/vermenigvuldigen_gemengde_breuken.html
+++ b/khan-exercises/exercises/vermenigvuldigen_gemengde_breuken.html
@@ -118,13 +118,13 @@
 	  &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
 	  <code>
 	     \color{#f00}{<var>WHOLE</var><var>fraction(NUM,DEN)</var>
-		  = \frac{<var>WHOLE</var> \times <var>DEN</var> \ + \  <var>NUM</var>}{<var>DEN</var>}}
+		  \  =  \  \displaystyle {}  \frac{<var>WHOLE</var> \times <var>DEN</var> \ + \  <var>NUM</var>}{<var>DEN</var>}}
 		 \color{#f00}{ = <var>fraction(DEN*WHOLE+NUM, DEN)</var>}
 		 </code><br /><br />
 		 &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
 		 <code>		  
 		 \color{#00f}{<var>WHOLE2</var><var>fraction(NUM2,DEN2)</var>
-		  = \frac{<var>WHOLE2</var> \times <var>DEN2</var> \ + \  <var>NUM2</var>}{<var>DEN2</var>}}
+		  \  =  \  \displaystyle {}  \frac{<var>WHOLE2</var> \times <var>DEN2</var> \ + \  <var>NUM2</var>}{<var>DEN2</var>}}
 		 \color{#00f}{ = <var>fraction(DEN2*WHOLE2+NUM2, DEN2)</var>}
 	  </code>
 	</p>
