--- a/khan-exercises/exercises/vergelijkingen_links_en_rechts_hetzelfde.html
+++ b/khan-exercises/exercises/vergelijkingen_links_en_rechts_hetzelfde.html
@@ -10,21 +10,35 @@
         <!-- equation is Ax + B = Cx + D -->
         <div class="vars" data-ensure="D !== 0 && D !== B">
             <var id="x">randRangeNonZero(-5, 15)</var>
-            <var id="letter">"abcdefghijkmnpqrstuvwxyz"[randRange(0, 25)]</var>
+            <var id="letters">shuffle("abcdefghijkmnpqrstuvwxyz")</var>
+            <var id="letter">letters[0]</var>
             <var id="A">randRangeNonZero( 2, 10 )</var>
             <var id="B">randRangeNonZero( -10, 10 )</var>
             <var id="C" data-ensure="abs( A - C ) > 1">randRangeNonZero( 2, 10 )</var>
             <var id="D">A*x + B - C*x</var>
         </div>
-        <div class="question">
-            <p>Los de volgende vergelijkingen op. Doe links en rechts hetzelfde.</p>
-            <code><var>A + letter</var> + <var>B</var> = <var>C + letter</var> + <var>D</var></code>
-        </div>
 
         <p class="solution" data-forms="integer"><var>x</var></p>
 
         <div class="problems">
-            <div id="problem1"></div>
+            <div id="simpel" data-weight="4">
+                <div class="question">
+                    <p>Los de volgende vergelijkingen op. Doe links en rechts hetzelfde.</p>
+                    <code><var>A + letter</var> + <var>B</var> = <var>C + letter</var> + <var>D</var></code>
+                </div>
+            </div>
+
+            <div id="omslagpunt">
+                <div class="question">
+                    <p>Zoek bij welke <code><var>letter</var></code> het omslagpunt ligt</p>
+                    <p>Formule 1: <code><var>letters[1]</var> = <var>A + letter</var> + <var>B</var></code></p>
+                    <p>Formule 2: <code><var>letters[1]</var> = <var>C + letter</var> + <var>D</var></code></p>
+                </div>
+                <div class="hints" data-apply="prependContents">
+                    <p>Maak een vergelijking van de formules</p>
+                    <code><var>A + letter</var> + <var>B</var> = <var>C + letter</var> + <var>D</var></code>
+                </div>
+            </div>
         </div>
 
         <div class="hints">
