--- a/khan-exercises/exercises/recognizing_rays_lines_and_line_segments.html
+++ b/khan-exercises/exercises/recognizing_rays_lines_and_line_segments.html
@@ -63,10 +63,14 @@
                     </div>
 
                     <div class="solution" data-tt="question3">Halflijn</div>
-
+                    <ul class="choices" data-category="true">
+                        <li data-tt="question2">Lijnstuk</li>
+                        <li data-tt="question3">Halflijn</li>
+                        <li data-tt="question4">Lijn</li>
+                    </ul>
                     <div class="hints">
                         <p data-tt="hint3">De figuur is een-dimensionaal en heeft een eindpunt. Het gaat echter oneindig door in de andere richting.</p>
-                        <p data-tt="hint4">Therefore, this figure is a <em>Halflijn</em>.</p>
+                        <p data-tt="hint4">Therefore, this figure is a <em>halflijn</em>.</p>
                     </div>
                 </div>
 
@@ -81,7 +85,11 @@
                     </div>
 
                     <div class="solution" data-tt="question4">Lijn</div>
-
+                    <ul class="choices" data-category="true">
+                        <li data-tt="question2">Lijnstuk</li>
+                        <li data-tt="question3">Halflijn</li>
+                        <li data-tt="question4">Lijn</li>
+                    </ul>
                     <div class="hints">
                         <p data-tt="hint5">De figuur is recht, een-dimensionaal, en gaat oneindig door in beide richtingen. Het heeft geen eindpunten.</p>
                         <p data-tt="hint6">Deze omschrijving betekent dat de figuur een <em>lijn</em> is.</p>
