Translation Tables Exercise

--- a/khan-exercises/exercises/reading_tables_2.html
+++ b/khan-exercises/exercises/reading_tables_2.html
@@ -29,9 +29,9 @@
         <var id="ROWS" data-tt="array1">[ [ school(1), school(2), school(3), school(4) ], [ person(1), person(2),
             person(3), person(4) ], [ person(1), person(2), person(3), person(4) ], [ "Alabama", "Michigan", "New York",
             "Wyoming" ] ][ INDEX ]</var>
-        <var id="COLUMNS" data-tt="array2">[ [ "3rd grade", "4th grade", "5th grade", "Total" ], [ "January",
-            "February", "March", "Total" ], [ "1st Quarter", "2nd Quarter", "3rd Quarter", "4th Quarter", "Final" ], [
-            "Q1", "Q2", "Q3", "Q4", "Total" ] ][ INDEX ]</var>
+        <var id="COLUMNS" data-tt="array2">[ [ "Groep 3", "Groep 4", "Groep 5", "Totaal" ], [ "Januari",
+            "Februari", "Maart", "Totaal" ], [ "1e kwart", "2e kwart", "3e kwart", "4e kwart", "Totaal" ], [
+            "Q1", "Q2", "Q3", "Q4", "Totaal" ] ][ INDEX ]</var>
         <var id="COL_INDEX">randRange( 0, COLUMNS.length - 1 )</var>
         <var id="ROW_INDEX">randRange( 0, ROWS.length - 1 )</var>
         <var id="ENROLLMENTS, ANSWER">
@@ -56,7 +56,7 @@
         <var id="PROBLEM" data-tt="array3">[ "toont de inschrijving op vier verschillende basisscholen voor leerlingen uit groep 3 t/m 5",
          "toont het aantal kippen die verkocht zijn door vier vrienden tussen januari en maart",
             "geeft het aantal punten weer die gescoord zijn door vier spelers in een benefit basketbalwedstrijd", "toont het aantal zonnepanelen per provincie die het afgelopen jaar ge&iuml;nstalleerd zijn" ][ INDEX ]</var>
-        <var id="HEADER" data-tt="array4">[ "scholen", "boeren", "spelers", "provincies" ][ INDEX ]</var>
+        <var id="HEADER" data-tt="array4">[ "Scholen", "Boeren", "Spelers", "Provincies" ][ INDEX ]</var>
         <var id="UNIT" data-tt="array5">[ "studenten", "kippen", "punten", "zonnepanelen" ][ INDEX ]</var>
         <var id="HINT1" data-tt="array6">
             (function() {
