--- a/khan-exercises/exercises/ordering_numbers.html
+++ b/khan-exercises/exercises/ordering_numbers.html
@@ -4,6 +4,13 @@
     <meta http-equiv="Content-Type" content="text/html; charset=UTF-8">
     <title>Ordering numbers</title>
     <script src="../khan-exercise.js"></script>
+
+    <style>
+        .sort-key {
+            visibility: hidden;
+            position: absolute;
+        }
+    </style>
 </head>
 <body>
     <div class="exercise">
@@ -80,6 +87,7 @@
                     <p>
                         <ul id="sortable">
                             <li data-each="NUMS as NUM">
+                                <span class="sort-key"><var>NUM[2]</var></span>
                                 <code><var>NUM[2]</var></code>
                             </li>
                         </ul>
