--- a/khan-exercises/exercises/alternate_exterior_angles_2.html
+++ b/khan-exercises/exercises/alternate_exterior_angles_2.html
@@ -46,7 +46,7 @@
     <div class="hints">
         <p>Alternatieve buitenhoeken zijn gelijk aan elkaar. </p>
         <div>
-            <p>De <code>\color{<var>BLUE</var>}{\text{blauwe hoek}}</code> en de <code>\color{<var>ORANGE</var>}{\text{oranje hoek}}</code> zijn alternatieve binnenhoeken. Daarom zijn ze gelijk aan elkaar.</p>
+            <p>De <code>\color{<var>BLUE</var>}{\text{blauwe hoek}}</code> en de <code>\color{<var>ORANGE</var>}{\text{oranje hoek}}</code> zijn Z-hoeken (alternatieve buitenhoeken)_. Daarom zijn ze gelijk aan elkaar.</p>
             <p><code>\color{<var>BLUE</var>}{<var>A</var>x + <var>B</var>} = \color{<var>ORANGE</var>}{<var>C</var>x + <var>D</var>}</code></p>
         </div>
 
