--- a/khan-exercises/exercises/vermenigvuldigenHeleGetallen_1.html
+++ b/khan-exercises/exercises/vermenigvuldigenHeleGetallen_1.html
@@ -2,7 +2,7 @@
 <html data-translatable data-require="math graphie graphie-helpers-arithmetic word-problems">
 <head>
     <meta charset="UTF-8" />
-    <title>Vermenigvuldigen 0.5</title>
+    <title>Wat is vermenigvuldigen?</title>
     <script src="../khan-exercise.js"></script>
 </head>
 <body>
@@ -49,7 +49,7 @@
                         }
                     </div>
                 </div>
-            </div><p>In totaal zijn er <var>plural(A,C)</var> keer <var>plural(B,D)</var>, dus <var>A*B</var> <var>plural(D)</var> (dit kun je controleren door de rijen te tellen).
+            </div><p>In totaal zijn er <var>plural(A,C)</var> keer <var>plural(B,D)</var>, dus <var>A*B</var> <var>plural(D)</var> (dit kun je controleren door de rijen te tellen).</p>
             
     </div>
 </body>
