Fixes bug that sneaked into prev fix

--- a/khan-exercises/exercises/telling_time.html
+++ b/khan-exercises/exercises/telling_time.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html  data-require="math math-format graphie time">
+<html data-translatable data-require="math math-format graphie time">
 <head>
     <meta http-equiv="Content-Type" content="text/html; charset=UTF-8">
     <title>Telling time</title>
