--- a/khan-exercises/exercises/measuring_angles.html
+++ b/khan-exercises/exercises/measuring_angles.html
@@ -57,7 +57,7 @@
                         graph.protractor.rotateTo( 360 - ANGLE_ONE );
                         label( [ 9 * cos( toRadians( ANGLE_ONE + DIFF ) ), 9 * sin( toRadians( ANGLE_ONE + DIFF ) ) ], "\\color{" + PINK + "}{" + DIFF + "^{\\circ}}" );
                     </div>
-                    <p data-tt="hint3">>De hoek is <code><var>DIFF</var></code> graden.</p>
+                    <p data-tt="hint3">De hoek is <code><var>DIFF</var></code> graden.</p>
                 </div>
             </div>
         </div>
